feat: 2nd task of 1st la10 exercise

--- a/courses/la10/exercises/ex01.tex
+++ b/courses/la10/exercises/ex01.tex
@@ -122,4 +122,27 @@ $D = \qty{3, 4}$.
     $\Rightarrow \qty{1} \subset \underset{n \in \mathbb{N}}\bigcap M_n$
   \end{itemize}
 \end{enumerate}
+
+\paragraph{Aufgabe 2} Begründen Sie, ob die folgenden Aussagen wahr oder falsch
+sind.
+\begin{enumerate}[(i)]
+\item $\qty{1, 2, 3} = \qty{3, 2, 1, 1}$
+  \subparagraph{Lsg.} Diese Aussage ist wahr, da die Reihenfolge der Elemente
+  und Dopplungen der Elemente bei Mengen keine Rolle spielen.
+
+\item $\qty{2, 4, 6} = \qty(2, 4, 6)$
+  \subparagraph{Lsg.} Diese Aussage ist falsch, da eine Menge kein Tupel ist.
+
+\item $\qty{1, 2, 3} \cap \qty{1, 2, \qty{3}} = \qty{1, 2}$
+  \subparagraph{Lsg.} Diese Aussage ist wahr, da $3 \ne \qty{3}$.
+
+\item $\qty{1, 2} \cup \qty{\qty{2, 3}} = \qty{1, 2, 3}$
+  \subparagraph{Lsg.} Diese Aussage ist falsch.
+  Das Element $3$ ist in keiner der beiden Ausgangsmengen enthalten.
+  Außerdem fehlt das Element $\qty{2, 3}$ in der Vereinigung.
+
+\item $\abs\big{\emptyset \cup \qty{1}} = 2$
+  \subparagraph{Lsg.} Diese Aussage ist falsch, denn die Vereinigung der
+  leeren Menge mit $\qty{1}$ enthält genau ein Element, nämlich die $1$.
+\end{enumerate}
 \end{document}
